--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
+    }
 }
 
 dependencies {
@@ -48,4 +56,15 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-compose:$nav_version"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // Jetpack Compose
+    implementation 'androidx.compose.material:material:1.2.1'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.2.1'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.2.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.2.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
 }
