--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
+
+    // To avoid a bug when testing Jetpack Compose on Android 13
+    // See https://issuetracker.google.com/issues/240993946
+    androidTestImplementation 'androidx.test:core:1.5.0-beta01'
 }
