--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
-    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
 
     // Jetpack navigation
     def nav_version = "2.5.2"
@@ -84,6 +83,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
+    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.27.0"
 
     // To avoid a bug when testing Jetpack Compose on Android 13
     // See https://issuetracker.google.com/issues/240993946
