--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
     implementation "androidx.paging:paging-compose:1.0.0-alpha17"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.27.0"
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+
 
     // To avoid a bug when testing Jetpack Compose on Android 13
     // See https://issuetracker.google.com/issues/240993946
